# binf4002_jupyterbook

./: .gitignore  AUDIT_RESPONSE.md  LICENSE-CC-BY-4.0  README.md  pyproject.toml
.github/workflows/: deploy.yml
Labs/notebooks/: lab0_preprocessing.ipynb  lab10_clustering.ipynb  lab13_ordinal_sequences.ipynb  lab14_images.ipynb  lab5_neural_networks.ipynb  lab6_multiclass_classification.ipynb
Labs/solutions/: lab10_clustering.ipynb  lab13_ordinal_sequences.ipynb  lab14_images.ipynb  lab2_decision_trees_SOLUTIONS.ipynb  lab6_multiclass_classification.ipynb  lab9_probabilistic_regression.ipynb
Lectures/: BINF4002_IRL_syllabus.md  questions.md
Lectures/lecture-01-orientation/: Lecture 1 - Intros_and_overview.pptx  README.md
Lectures/lecture-02-linear-algebra/: Lecture 2 - linear_algebra.pptx
Lectures/lecture-03-probability/: Lecture 3 - probability.pptx  README.md
Lectures/lecture-04-information-theory/: Lecture 4 - information_theory.pptx  README.md
Lectures/lecture-06-probabilistic-optimization/: README.md
Lectures/lecture-07-probabilistic-modeling/: README.md
Lectures/lecture-09-binary-classification-training/: Lecture 9.pptx  Lecture_9.ipynb
Lectures/lecture-10-generalization-domain-shift/: README.md
book/: _config.yml  _toc.yml  concept_map.md  concept_mindmap.html  intro.md  mind_map.md  syllabus.md  syllabus_markmap.md
book/labs/: intro.md  (+15 more)
scripts/: add_caveats.py  exec_status.tsv  execute_notebook.sh  inline_solutions.py  merge_study_guides.py  notebook_extras.tsv  post_swap_rerun.sh  rerun_status.tsv  run_all.sh  skip_todo_cells.py
(+130 files in other folders)
